deploy/demo/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kuard
  # I don't want to mess with anti-affinities so let's
  # just create enough pods to spread them across nodes.
  replicas: 6
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:1
        imagePullPolicy: Always
        name: kuard
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 128m
            memory: 128Mi
          # Limits are tricky, but I don't
          # want warnings here, so I added them.
          limits:
            cpu: 128m
            memory: 128Mi
