deploy/demo/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: kuard
